--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div id="main_content">
        <header>
-        <h1>CONROY CODY</h1>
+        <h1>CONROY, CODY</h1>
         <h2>Front-End Design + Development</h2>
        </header>
    <ul>
